--- a/WhatMovie/Home.xaml
+++ b/WhatMovie/Home.xaml
@@ -5,10 +5,20 @@
     xmlns:local="using:WhatMovie"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:data="using:WhatMovie.Models"
+    xmlns:data="using:WhatMovie.Rest"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+       <!-- <GridView ItemsSource="{x:Bind Movies}">
+            <GridView.ItemTemplate>
+                <DataTemplate x:DataType="data:Movie">
+                    <StackPanel>
+                        <Image Width="150" Source="{x:Bind poster_path}"/>
+                        <TextBlock FontSize="16" Text="{x:Bind title}"/>
+                        <TextBlock FontSize="10" Text="{x:Bind tagline}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>-->
     </Grid>
 </Page>
